Remove jsbuilder and tick corejs